// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Comments<CommentsLoop> when there are comments renders correctly 1`] = `
<View
  style={
    Object {
      "flex": 1,
      "width": "100%",
    }
  }
>
  <ScrollViewMock>
    <Text>
      Mock header
    </Text>
    <View
      style={
        Object {
          "marginHorizontal": 10,
          "marginVertical": 20,
        }
      }
    >
      <Title
        text="1 Tópicos"
      />
    </View>
    <FlatList
      contentContainerStyle={
        Object {
          "paddingBottom": 40,
        }
      }
      data={
        Array [
          Object {
            "author": Object {
              "avatarPath": Object {
                "testUri": "../../../app/assets/images/empower_two_women_logo.png",
              },
              "id": "1235we",
              "name": "Empodere Duas Mulheres",
            },
            "content": "Dá certo sim, o meu pai, por exemplo, fugiu quando eu tinha 5 anos e eu não faço ideia da onde ele esteja. Nunca mais voltou, pena que a violência só piorou.",
            "createdAt": 2019-01-01T00:00:00.000Z,
            "id": "21097",
            "replies": Array [],
            "totalReplies": 0,
          },
        ]
      }
      disableVirtualization={false}
      horizontal={false}
      initialNumToRender={10}
      keyExtractor={[Function]}
      maxToRenderPerBatch={10}
      numColumns={1}
      onEndReachedThreshold={2}
      removeClippedSubviews={false}
      renderItem={[Function]}
      scrollEventThrottle={50}
      updateCellsBatchingPeriod={50}
      windowSize={21}
    />
  </ScrollViewMock>
</View>
`;

exports[`Comments<CommentsLoop> when there are no comments renders correctly 1`] = `
<View
  style={
    Object {
      "flex": 1,
      "width": "100%",
    }
  }
>
  <ScrollViewMock>
    <Text>
      Mock header
    </Text>
    <View
      style={
        Object {
          "marginHorizontal": 10,
          "marginVertical": 20,
        }
      }
    >
      <Title
        text="0 Tópicos"
      />
    </View>
    <NoContent
      text="There are no comments :("
    />
    <FlatList
      contentContainerStyle={
        Object {
          "paddingBottom": 40,
        }
      }
      data={Array []}
      disableVirtualization={false}
      horizontal={false}
      initialNumToRender={10}
      keyExtractor={[Function]}
      maxToRenderPerBatch={10}
      numColumns={1}
      onEndReachedThreshold={2}
      removeClippedSubviews={false}
      renderItem={[Function]}
      scrollEventThrottle={50}
      updateCellsBatchingPeriod={50}
      windowSize={21}
    />
  </ScrollViewMock>
</View>
`;
